# veil

./: .gitignore  .npmrc  DECK.md  DEMO_SCRIPT.md  PHILOSOPHY.md  PRIVACYHACK_SUBMISSION_PLAN.md  README.md  SUBMISSION.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/confidential-swap-router/programs/confidential-swap-router/: Cargo.toml
apps/confidential-swap-router/programs/confidential-swap-router/src/: constants.rs  error.rs  lib.rs
apps/confidential-swap-router/programs/confidential-swap-router/src/state/: encrypted_order.rs  mod.rs  solver_config.rs
apps/darkflow/: Anchor.toml  Cargo.toml  README.md  hackathon-application.md  package.json  pitch-deck.html  social-media.md  tsconfig.json
apps/darkflow/app/: package.json
apps/darkflow/app/src/pages/: _app.tsx  index.tsx
apps/darkflow/app/src/styles/: globals.css
apps/darkflow/circuits/: Nargo.toml
apps/darkflow/circuits/execution/: Nargo.toml
apps/darkflow/circuits/execution/src/: main.nr
apps/darkflow/circuits/position/: Nargo.toml
apps/darkflow/circuits/position/src/: main.nr
apps/darkflow/circuits/swap/: Nargo.toml
apps/darkflow/circuits/swap/src/: main.nr
apps/darkflow/programs/darkflow/: Cargo.toml
apps/darkflow/programs/darkflow/src/: errors.rs  lib.rs  zk_verify.rs
apps/darkflow/programs/darkflow/src/instructions/: launch.rs  liquidity.rs  mod.rs  pool.rs  query.rs  swap.rs
apps/darkflow/programs/darkflow/src/state/: launch.rs  mod.rs  order.rs  pool.rs  position.rs
apps/darkflow/scripts/: demo-script.md  record-demo.js
apps/darkflow/sdk/: jest.config.js  package.json
apps/darkflow/sdk/src/: darkflow.ts  index.ts  launch.ts  liquidity.ts  pool.ts  swap.ts  types.ts
apps/darkflow/sdk/tests/: sdk.test.ts
apps/darkflow/tests/: darkflow.ts
apps/rwa-secrets-service/: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
apps/rwa-secrets-service/app/: .env.example  next.config.js  package.json
apps/rwa-secrets-service/app/.next/: react-loadable-manifest.json  trace
apps/rwa-secrets-service/app/.next/server/: _error.js  middleware-react-loadable-manifest.js
apps/rwa-secrets-service/app/.next/server/pages/: _app.js  _error.js  index.js
apps/rwa-secrets-service/app/.next/server/vendor-chunks/: @solana.js  (+2 more)
apps/rwa-secrets-service/app/src/pages/: _app.tsx  index.tsx
apps/rwa-secrets-service/app/src/styles/: globals.css
apps/rwa-secrets-service/programs/rwa-secrets/: Cargo.toml
apps/rwa-secrets-service/programs/rwa-secrets/src/: error.rs  lib.rs
apps/rwa-secrets-service/sdk/: package.json
apps/rwa-secrets-service/sdk/src/: client.ts  encryption.ts  idl.ts  index.ts
apps/rwa-secrets-service/tests/: rwa-secrets.ts
(+237 files in other folders)
