[workspace]
members = [
    "programs/*"
]

resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
# Pin blake3 to avoid edition2024 requirement
blake3 = "=1.5.5"
# Pin ahash to avoid SBF toolchain incompatibility (0.8.11 uses features unsupported by Solana's rustc)
ahash = "=0.8.7"
