[package]
name = "confidential-swap-router"
version = "0.1.0"
description = "Confidential Swap Router - MEV-protected swaps via encrypted orders"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "confidential_swap_router"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
