[package]
name = "darkflow"
version = "0.1.0"
description = "DarkFlow - Confidential AMM with Dark Liquidity"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkflow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = "0.30.0"
blake3 = { workspace = true }
