[package]
name = "rwa-secrets"
version = "0.1.0"
description = "Secrets-as-a-Service for Real World Assets on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_secrets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
